# wgpu-engine

./: Cargo.toml  LICENSE.md  README.md  rustfmt.toml
example/ex_compute_headless/: Cargo.toml
example/ex_compute_headless/src/: checker.wgsl  lib.rs  main.rs  perlin.wgsl
example/ex_nowindow/: Cargo.toml
example/ex_nowindow/src/: checker.wgsl  lib.rs  main.rs
example/ex_simple/: Cargo.toml  index.html
example/ex_simple/src/: lib.rs  main.rs  triangle.wgsl  vertex_color.wgsl
src/: events.rs  lib.rs  macros.rs  run.rs  state.rs  third_party.rs  time.rs  window.rs
src/app/: client.rs  current.rs  handler.rs  mod.rs
src/events/: data.rs  mod.rs
src/gfx/: buffer.rs  mesh.rs  mod.rs  shader.rs  state.rs  texture.rs  vertex.rs
src/gfx/buffer/: bytemuck_buf.rs  index_buf.rs  mod.rs  uniform_buf.rs  vertex_buf.rs
src/observer/: mod.rs  priority.rs  publisher.rs  subscriber.rs
tools/wgpu-server/: Cargo.toml
tools/wgpu-server/src/: main.rs
