[package]
name = "ex_simple"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
encase = { version = "0.11.2", features = ["glam"] }
wgpu-engine = { version = "0.1.0", path = "../.." }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
